@@ -1,5 +1,7 @@
 2017-05-08 qqbot v2.2.9
 1） 修正某些 linux 系统下 python2 下 sqlite3 数据库文件路径 bug ，感谢 lang 反馈问题。
+2） 根据测试结果， poll 消息时不再忽略 100001 代码，但忽略 103 代码。
+3） 当 poll 消息时收到未知代码时，先运行一次 session.TestLogin() ，只有在测试未通过时才会真正的停止本次 QQBot 的运行。
 
 2017-05-07 qqbot v2.2.8
 1） 忽略 poll 返回 100001 代码。
